<resources>
    <string name="app_name">Ntrust</string>
    <string name="login">Login</string>
    <string name="_login"><u>Login</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="continue_with">Continue With</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="read">Read</string>
    <string name="_tc"><u>Terms and Conditions</u></string>
    <string name="AlertEmailPassword">Please enter email id and password</string>
    <string name="AlertEmail">Please enter email id</string>
    <string name="AlertPassword">Please enter password</string>
    <string name="AlertEmailInvalid">Entered Email is invalid</string>
    <string name="AlertPasswordInvalid">Please enter minimum of 4 character password</string>
    <string name="verification_text">Your email has been verified,</string>
    <string name="verificationtext2">thank you for joining us!</string>
    <string name="email_verified">Email Verified</string>
    <string name="continue_button">Continue</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date of Birth (DD-MM-YY)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="submit">Submit</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="noInternetAlert">We are unable to connect to internet, please</string>
    <string name="noInternetAlert1">check your connection</string>
    <string name="refresh">Refresh</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_emailMessage">"Verification email has been sent to</string>
    <string name="verify_emailMessage1">"*******@email.com  please verify the</string>
    <string name="verify_emailMessage2">account by clicking the link</string>
    <string name="resend">Resend</string>
    <string name="facebook_app_id">294603171872260</string>
    <string name="fb_login_protocol_scheme">fb294603171872260</string>


</resources>