<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txt_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_text"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_verification_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/verificationtext2"
        android:textSize="@dimen/_12sp"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verification"
        tools:layout_editor_absoluteY="367dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_emailverified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/verify_icon"
        app:layout_constraintBottom_toTopOf="@+id/txt_verification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_emailVerified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_19"
        android:minLines="2"
        android:text="@string/email_verified"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_emailverified" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_44"
        android:background="@drawable/custom_login_button"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".6" />
</androidx.constraintlayout.widget.ConstraintLayout>