<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txt_noInternetAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noInternetAlert"
        android:textSize="@dimen/_12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/txt_noInternet" />

    <TextView
        android:id="@+id/txt_noInternetAlert2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/noInternetAlert1"
        android:textSize="@dimen/_12sp"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_noInternetAlert"
        tools:layout_editor_absoluteY="367dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_noInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nointernet_icon"
        app:layout_constraintBottom_toTopOf="@+id/txt_verification"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_150"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_noInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_19"
        android:minLines="2"
        android:text="@string/noInternetConnection"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_noInternet" />
    <TextView
        android:id="@+id/txt_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_19"
        android:minLines="2"
        android:text="@string/refresh"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
   <com.google.android.material.imageview.ShapeableImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/img_refresh"
       android:src="@drawable/refresh_icon"
       app:layout_constraintTop_toBottomOf="@+id/txt_refresh"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_marginTop="@dimen/_19"/>
</androidx.constraintlayout.widget.ConstraintLayout>