<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PersonalDetailsActivity">

    <TextView
        android:id="@+id/txt_personalDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24"
        android:text="@string/personal_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10"
        android:layout_marginLeft="@dimen/_10"
        android:layout_marginTop="@dimen/_20"
        android:src="@drawable/back_arrow_icon"
        android:id="@+id/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_fullname"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginTop="@dimen/_60"
        android:background="@drawable/customedittext"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:paddingStart="@dimen/_9"
        android:paddingLeft="@dimen/_9"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_personalDetails"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9" />

    <EditText
        android:id="@+id/edt_DOB"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginTop="@dimen/_10"
        android:background="@drawable/customedittext"
        android:drawableEnd="@drawable/calender_icom"
        android:drawableRight="@drawable/calender_icom"
        android:hint="@string/dob"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:paddingStart="@dimen/_9"
        android:paddingLeft="@dimen/_9"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_fullname"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9" />

    <RelativeLayout
        android:id="@+id/gender_relative_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginTop="@dimen/_10"
        android:background="@drawable/customedittext"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_DOB"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <Spinner
            android:id="@+id/edt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_9"
            android:layout_marginLeft="@dimen/_9"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop_icon" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edt_weight"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginStart="@dimen/_19"
        android:layout_marginLeft="@dimen/_19"
        android:layout_marginTop="@dimen/_10"
        android:background="@drawable/customedittext"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_9"
        android:paddingLeft="@dimen/_9"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_relative_layout"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="TextFields" />

    <RelativeLayout
        android:id="@+id/weight_relative_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginTop="@dimen/_10"
        android:layout_marginEnd="@dimen/_19"
        android:layout_marginRight="@dimen/_19"
        android:background="@drawable/customedittext"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edt_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_relative_layout"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <Spinner
            android:id="@+id/edtdrop_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_9"
            android:layout_marginLeft="@dimen/_9"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:prompt="@string/weight"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop_icon" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginStart="@dimen/_19"
        android:layout_marginLeft="@dimen/_19"
        android:layout_marginTop="@dimen/_10"
        android:background="@drawable/customedittext"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_9"
        android:paddingLeft="@dimen/_9"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_weight"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="TextFields" />

    <RelativeLayout
        android:id="@+id/height_relative_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44"
        android:layout_marginTop="@dimen/_10"
        android:layout_marginEnd="@dimen/_19"
        android:layout_marginRight="@dimen/_19"
        android:background="@drawable/customedittext"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/_19"
        android:paddingRight="@dimen/_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edt_height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_weight"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <Spinner
            android:id="@+id/edtdrop_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_9"
            android:layout_marginLeft="@dimen/_9"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:prompt="@string/weight"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/drop_icon" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_44"
        android:background="@drawable/custom_login_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />
</androidx.constraintlayout.widget.ConstraintLayout>